--- a/src/components/sections/MapSection/MapSection.module.scss
+++ b/src/components/sections/MapSection/MapSection.module.scss
@@ -21,8 +21,8 @@
 }
 
 .containerLeft {
-    min-width: 300px;
-    padding-right:30px;
+    min-width: 280px;
+  //  padding-right:30px;
      flex-basis: 70%;
      order:1;
 }
@@ -38,7 +38,7 @@
 }
 
 .containerBottom {
-    min-width:300px;
+    min-width:280px;
     flex-basis:100%;		    
     height: 600px;
     order:3;
